--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9eR-AO-P2i">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -9,16 +9,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Weather View Controller-->
+        <!--Today-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="WeatherViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TodayViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="sun.max" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9Ah-cG-kOR" userLabel="WeatherImage">
-                                <rect key="frame" x="117" y="92.000000000000014" width="141" height="180.33333333333334"/>
+                                <rect key="frame" x="117" y="136" width="141" height="155.99999999999997"/>
                                 <color key="tintColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="180" id="Gyq-pO-fko"/>
@@ -26,13 +26,13 @@
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bIM-X1-XEU">
-                                <rect key="frame" x="145.33333333333334" y="284" width="84.333333333333343" height="28.666666666666686"/>
+                                <rect key="frame" x="145.33333333333334" y="303.66666666666669" width="84.333333333333343" height="28.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp | Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yQF-ZQ-zv3" userLabel="TempAndDescrLabel">
-                                <rect key="frame" x="79.333333333333329" y="324.66666666666669" width="216.33333333333337" height="60.333333333333314"/>
+                                <rect key="frame" x="79.333333333333329" y="344.33333333333331" width="216.33333333333337" height="40.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="34"/>
                                 <color key="textColor" systemColor="linkColor"/>
                                 <nil key="highlightedColor"/>
@@ -177,8 +177,16 @@
                                     <constraint firstAttribute="trailing" secondItem="eiE-mn-DZH" secondAttribute="trailing" constant="20" id="eL1-oa-FRN"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9vx-DL-mp2">
+                                <rect key="frame" x="140" y="577.33333333333337" width="95.333333333333314" height="99.666666666666629"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Share">
+                                    <fontDescription key="titleFontDescription" type="system" weight="thin" pointSize="30"/>
+                                    <color key="baseForegroundColor" systemColor="systemOrangeColor"/>
+                                </buttonConfiguration>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="VOq-oK-Htz">
-                                <rect key="frame" x="70" y="749" width="235" height="38"/>
+                                <rect key="frame" x="70" y="737" width="235" height="38"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="asz-WQ-XtH">
                                         <rect key="frame" x="0.0" y="0.0" width="97.666666666666671" height="38"/>
@@ -201,28 +209,23 @@
                                             <fontDescription key="titleFontDescription" type="system" pointSize="15"/>
                                             <directionalEdgeInsets key="contentInsets" top="20" leading="0.0" bottom="0.0" trailing="0.0"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <segue destination="Y3h-tT-55G" kind="show" id="Hb6-TQ-5SX"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9vx-DL-mp2">
-                                <rect key="frame" x="140" y="577.33333333333337" width="95.333333333333314" height="111.66666666666663"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Share">
-                                    <fontDescription key="titleFontDescription" type="system" weight="thin" pointSize="30"/>
-                                    <color key="baseForegroundColor" systemColor="systemOrangeColor"/>
-                                </buttonConfiguration>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="tintColor" systemColor="labelColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="VOq-oK-Htz" secondAttribute="bottom" constant="37" id="1Jm-wn-ghn"/>
                             <constraint firstItem="9vx-DL-mp2" firstAttribute="top" secondItem="eZL-qo-Cx3" secondAttribute="bottom" constant="60" id="52J-b3-1lw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eZL-qo-Cx3" secondAttribute="trailing" id="63q-00-AdY"/>
                             <constraint firstItem="9vx-DL-mp2" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="140" id="9bo-ZC-aff"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="yQF-ZQ-zv3" secondAttribute="trailing" constant="83.5" id="ISi-oB-QXL"/>
                             <constraint firstItem="bIM-X1-XEU" firstAttribute="top" relation="lessThanOrEqual" secondItem="9Ah-cG-kOR" secondAttribute="bottom" priority="750" constant="12" id="JDU-Oa-oUe"/>
-                            <constraint firstAttribute="bottom" secondItem="VOq-oK-Htz" secondAttribute="bottom" constant="25" id="PJJ-d6-XPQ"/>
                             <constraint firstItem="yQF-ZQ-zv3" firstAttribute="top" relation="lessThanOrEqual" secondItem="bIM-X1-XEU" secondAttribute="bottom" priority="750" constant="12" id="RR1-Dn-ALR"/>
                             <constraint firstItem="yQF-ZQ-zv3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XsZ-M8-3Qj"/>
                             <constraint firstItem="9Ah-cG-kOR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="117" id="Y3C-YB-MEu" userLabel="WeatherImage.leading = Safe Area.leading"/>
@@ -241,6 +244,7 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Today" id="Yvp-Ma-aeg"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="humidityLabel" destination="pUI-Ak-GUh" id="yQ4-ld-7Jy"/>
@@ -255,7 +259,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="93.75"/>
+            <point key="canvasLocation" x="783" y="92"/>
+        </scene>
+        <!--Forecast View Controller-->
+        <scene sceneID="JVr-XC-KCh">
+            <objects>
+                <viewController id="Y3h-tT-55G" customClass="ForecastViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nKc-UC-544">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4wc-hl-0T8">
+                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y3h-tT-55G" id="qzw-8P-cBv"/>
+                                    <outlet property="delegate" destination="Y3h-tT-55G" id="82i-wT-Rpx"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="B9S-If-kp8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="B9S-If-kp8" firstAttribute="bottom" secondItem="4wc-hl-0T8" secondAttribute="bottom" id="5m8-O8-HgM"/>
+                            <constraint firstItem="4wc-hl-0T8" firstAttribute="top" secondItem="B9S-If-kp8" secondAttribute="top" id="WQ5-xU-9Fp"/>
+                            <constraint firstItem="B9S-If-kp8" firstAttribute="trailing" secondItem="4wc-hl-0T8" secondAttribute="trailing" id="iKW-ns-5ep"/>
+                            <constraint firstItem="4wc-hl-0T8" firstAttribute="leading" secondItem="B9S-If-kp8" secondAttribute="leading" id="kAy-xp-2WO"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sJ2-x5-vip"/>
+                    <connections>
+                        <outlet property="forecastTableView" destination="4wc-hl-0T8" id="FXQ-q3-vqi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wKE-Ra-t5t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1549.5999999999999" y="91.625615763546804"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fIA-NG-a8k">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9eR-AO-P2i" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Epv-nZ-Lgb">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3n2-Ic-aQ4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bDO-3w-QNW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.399999999999999" y="93.103448275862078"/>
         </scene>
     </scenes>
     <resources>
