--- a/Weather/Views/Base.lproj/LaunchScreen.storyboard
+++ b/Weather/Views/Base.lproj/LaunchScreen.storyboard
@@ -27,13 +27,13 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="55" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uw4-jQ-5LR">
                                 <rect key="frame" x="8" y="44" width="398" height="243"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="100"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="100"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="iconBackground"/>
+                        <color key="backgroundColor" name="launchScreenBackground"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Uw4-jQ-5LR" secondAttribute="trailing" constant="8" id="DTX-uK-6dh"/>
                             <constraint firstItem="Uw4-jQ-5LR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="FWT-K8-lYJ"/>
@@ -52,7 +52,7 @@
     </scenes>
     <resources>
         <image name="cloudy" width="512" height="512"/>
-        <namedColor name="iconBackground">
+        <namedColor name="launchScreenBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemYellowColor">
